User, StockMovement, TransportOrder and warehouse logic update, jwt auth filter update